--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.1",
     "hbs": "^4.1.1",
     "node": "^17.7.2",
+    "nodemon": "^2.0.16",
     "punkapi-javascript-wrapper": "^1.0.2"
   },
   "description": "![logo_ironhack_blue 7](https://user-images.githubusercontent.com/23629340/40541063-a07a0a8a-601a-11e8-91b5-2f13e4e6b441.png)",
@@ -21,5 +22,6 @@
   "bugs": {
     "url": "https://github.com/josepCortesManyanich/lab-ironbeers/issues"
   },
-  "homepage": "https://github.com/josepCortesManyanich/lab-ironbeers#readme"
+  "homepage": "https://github.com/josepCortesManyanich/lab-ironbeers#readme",
+  "devDependencies": {}
 }
